setting up break points and styling for home and features pages and setting up features subpages

--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -211,7 +211,32 @@
   padding: 100px 0 100px 0;
 }
 
-@media screen and (max-width: 1250px) {
+@media (min-width: 1200px) {
+  .feature-home-page-shared-component-image-left-side-col {
+    height: auto;
+    min-height: 421px;
+    background: linear-gradient(to right, #ebf9ff 50%, transparent 50%);
+  }
+  .feature-home-page-shared-component-image-right-side-col {
+    height: auto;
+    min-height: 421px;
+    background: linear-gradient(to left, #ebf9ff 50%, transparent 50%);
+  }
+}
+
+@media (max-width: 1199px) {
+  .feature-home-page-shared-component-image-left-side-col {
+    height: auto;
+    min-height: 421px;
+  }
+
+  .feature-home-page-shared-component-image-right-side-col {
+    height: auto;
+    min-height: 421px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
   .feature-homePageFeaturesImage {
     display: flex;
     align-items: center;
@@ -325,12 +350,11 @@
   justify-content: center;
 }
 
-/* .vertical-center-image {
+.medium-home-left-side-text-image {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-direction: column-reverse;
-} */
+}
 
 .productImgRight {
   position: relative;
@@ -362,6 +386,16 @@
   max-width: 594px;
   height: auto;
   margin-right: 300px;
+}
+
+.medium-feature-home-subpage-image-sizing {
+  /* max-width: 594px; */
+  /* height: auto; */
+}
+
+.test-feature-subpage-image{
+  max-width: 594px;
+  height: auto;
 }
 
 .medium-feature-subpage-image-sizing-left {
