--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -3,6 +3,11 @@
   /* font-size: 42px; */
 }
 
+.features-img {
+  box-shadow:  6px 9px 20px rgba(0,0,0,0.2);
+  border-radius: 4px;
+}
+
 .titleContainer {
   margin-bottom: 5rem;
   margin-top: 5rem;
