adding in linked in to about page

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -293,3 +293,12 @@
 .about-leadership-team-row {
   justify-content: space-around;
 }
+
+.linked-in-icon{
+  max-width: 20px;
+}
+
+.linked-in-container{
+  display: flex;
+  justify-content: center;
+}
