--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,6 +2,17 @@
   font-family: "domainedisplay_regular", Arial, Helvetica, sans-serif;
 }
 
+.medium-home-feature-img-div-container{
+  display: inline-flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.medium-home-feature-img-div{
+  display: inline-flex;
+  justify-content: center;
+}
+
 .text-center {
   text-align: center;
 }
