--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -692,3 +692,14 @@
     padding: 0 50px;
   }
 }
+
+
+.marquee-school-image-container{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.marquee-school-image{
+  max-height: 60px;
+  width: auto;
+}
