--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -703,3 +703,13 @@
   max-height: 60px;
   width: auto;
 }
+
+.slider-container{
+  border: solid red 2px;
+  justify-content: center;
+  max-width: 750px;
+}
+
+.slider-element{
+  border: solid green 2px;
+}
