--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -736,6 +736,32 @@
 @media screen and (max-width: 500px) {
   .slick-list{
     max-height: 200px;
-    max-width: 1000px;
+    max-width: 100vw;
+  }
+  .slick-track{
+    max-width: 100vw;
+  }
+  .slick-slide{
+    max-width: 200px !important;
+  }
+}
+
+.test-class{
+  border: solid red 2px;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
+}
+
+
+@media screen and (max-width: 500px) {
+  .home-page-carousel{
+    display: none ;
+  }
+
+}
+
+@media screen and (min-width: 501px) {
+  .home-page-video{
+    display: none;
   }
 }
