--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -736,7 +736,7 @@
 @media screen and (max-width: 500px) {
   .slick-list{
     max-height: 200px;
-    max-width: 100vw;
+    max-width: 1000px;
   }
   .slick-track{
     max-width: 100vw;
@@ -744,12 +744,6 @@
   .slick-slide{
     max-width: 200px !important;
   }
-}
-
-.test-class{
-  border: solid red 2px;
-  overflow-y: hidden !important;
-  overflow-x: hidden !important;
 }
 
 
