--- a/src/index.css
+++ b/src/index.css
@@ -66,13 +66,14 @@ code {
 
 .subFooterItem {
   padding: .75rem 1.25rem;
-  font-family: "roboto_regular";
-  font-size: 14px;
-  font-weight: 500;
   color: #676767;
 }
 
 .subFooterItem a {
+  font-family: "roboto_regular";
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
   margin-right: 21px;
 }
 
