--- a/src/pages/sharedComponents/FeaturedVideo.css
+++ b/src/pages/sharedComponents/FeaturedVideo.css
@@ -6,6 +6,7 @@
 .featuredVideoWrapper {
   padding-bottom: 1rem;
   margin-right: 5rem;
+  margin-bottom: 4rem;
 }
 
 .featuredVideoWrapper > div {
@@ -15,6 +16,12 @@
 
 .featuredVideo {
   box-shadow: 1rem 1rem #FFCA44;
+}
+
+@media only screen and (max-width: 767px) {
+  .featuredVideo {
+    box-shadow: .5rem .5rem #FFCA44;
+  }
 }
 
 .featuredVideoInfo h1 {
