update css style on mobile size

--- a/src/index.css
+++ b/src/index.css
@@ -376,3 +376,7 @@ button:hover {
 .sharp-corners-button {
   border-radius: 0px !important;
 }
+
+.schoolTestimonialsTitle {
+  justify-content: center;
+}
