--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -17,6 +17,18 @@
   justify-content: center;
 }
 
+@media (max-width: 767px) {
+  .titleContainer {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    padding: 0 10%;
+  }
+
+  .titleContainer h1 {
+    font-size: 1.5rem;
+  }
+}
+
 .features-titleContainer {
   margin-top: 5rem;
   padding: 0 20%;
