--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -637,7 +637,7 @@
 }
 
 .demo-cta-title-text {
-  font-size: 3rem;
+  font-size: 4rem;
   text-align: center;
   width: 700px;
 }
@@ -646,6 +646,13 @@
   display: flex;
   justify-content: center;
   /* padding-bottom: 0px; */
+}
+
+@media (max-width: 767px) {
+  .demo-cta-title-text {
+    font-size: 2.25rem;
+    width: 100%;
+  }
 }
 
 .home-page-partner-image {
