DemoCallToAction description style issue

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -639,13 +639,19 @@
 .demo-cta-title-text {
   font-size: 4rem;
   text-align: center;
-  width: 700px;
+  width: 930px;
 }
 
 .demo-cta-content {
   display: flex;
   justify-content: center;
   /* padding-bottom: 0px; */
+}
+
+@media (max-width: 1223px) and (min-width: 768px) {
+  .demo-cta-title-text {
+    width: 660px;
+  }
 }
 
 @media (max-width: 767px) {
