--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -14,6 +14,12 @@
   overflow: hidden;
 }
 
+.featuresPageHeader .blueCircle {
+  position: absolute;
+  right: -1rem;
+  top: 1rem;
+}
+
 .featuresPageTitle {
   width: 60%;
   margin: 7rem 8rem;
@@ -48,7 +54,7 @@
   height: auto;
 }
 
-.headerBottomArc {
+.featuresHeaderBottomArc {
   width: 140%;
   margin-left: -20%;
   margin-right: -20%;
@@ -59,6 +65,17 @@
   bottom: -32%;
 }
 
+.featuresHeaderBlueCircle {
+  position: absolute;
+  border-radius: 50%;
+  border: 5.6px solid #1886DF;
+  background: transparent;
+  width: 18rem;
+  height: 18rem;
+  top: 2.5rem;
+  right: -5.25rem;
+}
+
 @media (max-width: 1223px) and (min-width: 768px) {
   .featuresPageTitle {
     margin: 4rem 4.5rem;
@@ -66,6 +83,13 @@
 
   .featuresImages {
     margin-bottom: 8rem !important;
+  }
+
+  .featuresHeaderBlueCircle {
+    width: 10rem;
+    height: 10rem;
+    top: 2rem;
+    right: -3rem;
   }
 }
 
@@ -82,6 +106,13 @@
 
   .featuresImages {
     margin-bottom: 6rem !important;
+  }
+
+  .featuresHeaderBlueCircle {
+    width: 5rem;
+    height: 5rem;
+    top: 1.6rem;
+    right: -1.6rem;
   }
 }
 
