align center feature contents

--- a/src/pages/features/components/FeatureTable.css
+++ b/src/pages/features/components/FeatureTable.css
@@ -1,7 +1,7 @@
 .feature-content-container {
-  margin:50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   background-color: transparent;
-  width: 700px;
 }
 
 .feature-content-row {
